src/test/ui/const-generics/issues/issue-62220.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-62220.rs:8:59
   |
LL | pub type TruncatedVector<T, const N: usize> = Vector<T, { N - 1 }>;
   |                                                           ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to previous error

